# career-guidance-app

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: Dockerfile  main.py  pyproject.toml  worker.py
app/config/: psql.py  rabbitmq.py
app/create_entites/inference_data/: inference_data.py
app/create_entites/person/: person.py
app/create_entites/person_db/: person.py
app/database/: engine.py
app/dtos/: deposit_request_dto.py  inference_data_dto.py  ml_model_dto.py  ml_request_dto.py  person_dto.py  register_person_dto.py  response_data_dto.py  transaction_dto.py  update_balance_dto.py  user_login_dto.py
app/entities/: balance.py  deposit_request.py  ml_request.py
app/entities/inference_data/: inference_data.py
app/entities/ml_model/: ml_model.py
app/entities/person/: person.py
app/entities/response/: response.py
app/entities/response_data/: response_data.py
app/entities/transaction/: transaction.py
app/messaging/: rabbitmq.py
app/migrations/: env.py  script.py.mako
app/migrations/versions/: 077c4f22ff0b_add_inference_data_model.py  110237db23da_add_ml_request_model.py  (+16 more)
app/models/: __init__.py  balance.py  data.py  deposit_request.py  deposit_transaction.py  inference_data.py  ml_model.py  ml_request.py  ml_request_transaction.py  person.py  response_data.py  user.py
app/services/: admin_service.py  balance_service.py  deposit_request_service.py  inference_data_service.py  ml_model_service.py  ml_request_service.py  person_service.py  response_data_service.py  transaction_service.py  user_service.py
(+84 files in other folders)
